--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <meta name="viewport" content="width=device-width">
         <title>hbnb</title>
     </head>
-    <body style="margin: 0px; padding: 0px; display:flex; flex-direction: column; justify-content: space-between; height: 100vh;">
+    <body style="margin: 0px; padding: 0px; display:flex; flex-direction: column;
+        justify-content: space-between; height: 100vh;">
         <header style="background-color: #FF0000; height: 70px; width: 100%">
         </header>
-        <footer style="background-color: #00FF00; height: 60px; width: 100%; display:flex; flex-direction: column; justify-content: center; align-items:center;">
+        <footer style="background-color: #00FF00; height: 60px; width: 100%;
+            display:flex; flex-direction: column; justify-content: center; align-items:center;">
             <p>Best School</p>
         </footer>
     </body>
