--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <meta name="viewport" content="width=device-width">
         <title>hbnb</title>
         <style>
             body {
-                margin: 0px; padding: 0px; display:flex; flex-direction: column; justify-content: space-between; height: 100vh;
+                margin: 0px; padding: 0px; display:flex; flex-direction: column;
+                justify-content: space-between; height: 100vh;
             }
             header {
                 background-color: #FF0000; height: 70px; width: 100%
             }
             footer {
-                background-color: #00FF00; height: 60px; width: 100%; display:flex; flex-direction: column; justify-content: center; align-items:center;
+                background-color: #00FF00; height: 60px; width: 100%; display:flex;
+                flex-direction: column; justify-content: center; align-items:center;
             }
         </style>
     </head>
