--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -18,12 +18,12 @@
         <div class="container">
             <section class="filters">
                 <div class="locations">
-                    <h3>States</h3>
-                    <h4>Lorem ipsum dolor</h4>
+                    <h3 class="filters_title">States</h3>
+                    <h4 class="filters_subtitle">Lorem ipsum dolor</h4>
                 </div>
                 <div class="amenities">
-                    <h3>Amenities</h3>
-                    <h4>Lorem ipsum dolor</h4>
+                    <h3 class="filters_title">Amenities</h3>
+                    <h4 class="filters_subtitle">Lorem ipsum, dolor</h4>
                 </div>
                 <button>Search</button>
             </section>
